--- a/cart.html
+++ b/cart.html
@@ -95,7 +95,7 @@
         border-radius: 15px;
         padding: 5px 20px;
         display: grid;
-        grid-template-columns: 70% 30%;
+        grid-template-columns: 20% 80%;
       }
       .nav2{
         display: flex;
@@ -114,7 +114,7 @@
   <nav>
     <div id="navbar">
         <div class="nav1">
-            <p>Rebook</p>
+            <p>Shoppy</p>
         </div>
         <div class="nav2">
             <p>
