--- a/index.html
+++ b/index.html
@@ -7,22 +7,31 @@
     <title>Navbar</title>
     <style>
       #navbar {
+        /* border: 2px solid red; */
         background-color: #1c2938;
         border-radius: 15px;
         padding: 5px 20px;
         display: grid;
-        grid-template-columns: 70% 30%;
+        grid-template-columns: 20% 80%;
       }
+      /* .nav1{
+        border: 2px solid white;
+      } */
       .nav2{
+        /* border: 2px solid white; */
         display: flex;
         justify-content: space-around;
       }
-      .nav1 > p {
+      .nav1>p{
         color: #d7d7d7;
       }
-      .nav2 > p > a{
+      .nav2>p>a{
         text-decoration: none;
         color: #d7d7d7;
+      }
+      .textCenter{
+        text-align: center;
+        
       }
     </style>
   </head>
@@ -30,13 +39,13 @@
     <nav>
         <div id="navbar">
             <div class="nav1">
-                <p>Rebook</p>
+                <p>Shoppy</p>
             </div>
             <div class="nav2">
-                <p>
+                <p id="mns">
                    <a href="mens.html">Mens</a> 
                 </p>
-                <p>
+                <p id="wmns">
                    <a href="womens.html">Womens</a> 
                 </p>
                 <p>
@@ -45,17 +54,54 @@
                  <p>
                    <a href="signup.html">Signup</a> 
                 </p>
-                <p>
+                <p id="crt">
                   <a href="cart.html">Your Cart</a> 
                </p>
-               <p>
+               <p id="lout">
                 <a class="logout">Log out</a>
                </p>
             </div>
         </div>
     </nav>  
-  </body>
-  <script>
 
-  </script>
+    <div id="welcome" class="textCenter"><h3>Welcome <span class="wlcm"></span></h3></div>
+  </body>
+
 </html>
+<script>
+
+let loginData=JSON.parse(localStorage.getItem("loginAs"))
+checklogin(loginData)
+
+
+//welcome
+if(loginData==null){
+  let mens=document.getElementById("mns")
+  let womens=document.getElementById("wmns")
+  let wlcm=document.getElementById("welcome")
+  let crt=document.getElementById("crt")
+  let lout=document.getElementById("lout")
+  wlcm.style.visibility="hidden";
+  mens.style.visibility="hidden";
+  womens.style.visibility="hidden";
+  crt.style.visibility="hidden";
+  lout.style.visibility="hidden";
+}
+else{
+  let wlcm=document.querySelector(".wlcm")
+  wlcm.innerText=loginData
+}
+
+
+  //check for login
+  function checklogin(loginData){
+    if(loginData==null){
+      alert("please login")
+      location.replace("login.html")
+    }
+    else if(loginData.length>=1){
+      return;
+    }
+  }
+
+</script>
