--- a/mens.html
+++ b/mens.html
@@ -26,7 +26,7 @@
         border-radius: 15px;
         padding: 5px 20px;
         display: grid;
-        grid-template-columns: 70% 30%;
+        grid-template-columns: 20% 80%;
       }
       nav{
         position: sticky;
@@ -39,7 +39,7 @@
       .nav1 > p {
         color: #d7d7d7;
       }
-      .nav2 > p > a{
+      .nav2 > p > a, .nav1>p>a{
         text-decoration: none;
         color: #d7d7d7;
       }
@@ -73,7 +73,7 @@
   <nav>
     <div id="navbar">
         <div class="nav1">
-            <p>Rebook</p>
+            <p><a href="index.html">Shoppy</a> </p>
         </div>
         <div class="nav2">
             <p>
