--- a/womens.html
+++ b/womens.html
@@ -26,7 +26,7 @@
         border-radius: 15px;
         padding: 5px 20px;
         display: grid;
-        grid-template-columns: 70% 30%;
+        grid-template-columns: 20% 80%;
       }
       nav{
         position: sticky;
@@ -73,7 +73,7 @@
   <nav>
     <div id="navbar">
         <div class="nav1">
-            <p>Rebook</p>
+            <p>Shoppy</p>
         </div>
         <div class="nav2">
             <p>
