--- a/otp.html
+++ b/otp.html
@@ -5,30 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OTP authentication</title>
-    <style>
-        *{
-            text-align: center;
-        }
-        .otp{
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-            width: 300px;
-            margin: auto;
-            padding: 20px;
-            margin-top: 30px;
-            background-color: rgb(249, 245, 245);
-        }
-        button{
-            margin-top: 15px;
-            background-color: rgb(17, 108, 193);
-            color: white;
-            border: 1px solid transparent;
-            border-radius: 5px;
-            padding: 5px 20px;
-        }
-        input{
-            padding: 4px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/otp.css">
+
 </head>
 <body>
     <div>
@@ -41,19 +19,4 @@
     </div>
 </body>
 </html>
-<script>
-    
-   
-    document.querySelector("#btn").addEventListener("click",myfcn)
-    function myfcn(){
-        let pswd=document.querySelector("#pswd").value
-        if(pswd=="1234"){
-            alert("Payment successful")
-            localStorage.removeItem("cart");
-            location.replace("mens.html")
-        }
-        else{
-            alert("Wrong OTP")
-        }
-    }
-</script>
+<script src="javascript/otp.js"></script>
